[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Entities/NPC/necklace.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/QuestItems/Necklace.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/object.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 5 )

[node name="Necklace" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ObjectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 6.0

[connection signal="body_entered" from="." to="." method="_on_Necklace_body_entered"]
[connection signal="finished" from="ObjectSound" to="." method="_on_ObjectSound_finished"]
